# flutter_rust_example

./: README.md  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/flutter_rust_example/: MainActivity.kt
android/app/src/profile/: AndroidManifest.xml
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: bridge_generated.dart  bridge_generated_api.dart  bridge_generated_methods.dart  main.dart
rust/: Cargo.toml
rust/src/: api.rs  bridge_generated.rs  bridge_generated_api.rs  bridge_generated_methods.rs  lib.rs  main.rs  methods.rs  models.rs
rust/src/api/: controlled_stream.rs  person.rs  tick.rs
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
